--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -62,10 +62,11 @@ jobs:
           echo "GRAPHQL_FEATURE_PACK_URL=https://github.com/wildfly-extras/wildfly-graphql-feature-pack/releases/download/2.0.0.Final/wildfly-27.0.0.Final-mp-graphql-2.0.0.Final-overlay.zip" >> $GITHUB_ENV
           ;;
         28.0)
-          echo "GRAPHQL_FEATURE_PACK_URL=https://github.com/wildfly-extras/wildfly-graphql-feature-pack/releases/download/2.1.0.Final/wildfly-28.0.0.Final-mp-graphql-2.1.0.Final-SNAPSHOT-overlay.zip" >> $GITHUB_ENV
+          echo "GRAPHQL_FEATURE_PACK_URL=https://github.com/wildfly-extras/wildfly-graphql-feature-pack/releases/download/2.1.0.Final/wildfly-28.0.0.Final-mp-graphql-2.1.0.Final-overlay.zip" >> $GITHUB_ENV
           ;;
         *)
           echo "unmapped wf version ${{env.MAJOR_MINOR_WF_VERSION}}"
+          ;;
 
     - name: build and push the graphql image
       run: >
