--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,6 +20,7 @@ jobs:
         - 26.1.3.Final
         - 27.0.1.Final
         - 28.0.1.Final
+        - 29.0.0.Final
     name: ${{matrix.wf}}-${{matrix.jdk}}
     steps:
     - uses: actions/checkout@v3
@@ -69,10 +70,10 @@ jobs:
       run:
         echo "GRAPHQL_FEATURE_PACK_VERSION=2.0.0.Final" >> $GITHUB_ENV
       if: ${{env.MAJOR_WF_VERSION == '27'}}
-    - name: set GraphQL Feature Pack Version (28)
+    - name: set GraphQL Feature Pack Version (28|29)
       run:
         echo "GRAPHQL_FEATURE_PACK_VERSION=2.1.0.Final" >> $GITHUB_ENV
-      if: ${{env.MAJOR_WF_VERSION == '28'}}
+      if: ${{env.MAJOR_WF_VERSION == '28' || env.MAJOR_WF_VERSION == '29'}}
     - name: Check GRAPHQL_FEATURE_PACK_VERSION
       run:
         echo "GRAPHQL_FEATURE_PACK_VERSION not mapped"
