--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -70,15 +70,24 @@ jobs:
       run:
         echo "GRAPHQL_FEATURE_PACK_VERSION=2.0.0.Final" >> $GITHUB_ENV
       if: ${{env.MAJOR_WF_VERSION == '27'}}
-    - name: set GraphQL Feature Pack Version (28|29)
+    - name: set GraphQL Feature Pack Version (28)
       run:
         echo "GRAPHQL_FEATURE_PACK_VERSION=2.1.0.Final" >> $GITHUB_ENV
-      if: ${{env.MAJOR_WF_VERSION == '28' || env.MAJOR_WF_VERSION == '29'}}
+      if: ${{env.MAJOR_WF_VERSION == '28'}}
+    - name: set GraphQL Feature Pack Version (29)
+      run:
+        echo "GRAPHQL_FEATURE_PACK_VERSION=2.1.0.Final" >> $GITHUB_ENV
+        echo "GRAPHQL_FEATURE_PACK_WILDFLY_VERSION=28.0.0.Final" >> $GITHUB_ENV
+      if: ${{env.MAJOR_WF_VERSION == '29'}}
     - name: Check GRAPHQL_FEATURE_PACK_VERSION
       run:
         echo "GRAPHQL_FEATURE_PACK_VERSION not mapped"
         exit -1
       if: ${{env.GRAPHQL_FEATURE_PACK_VERSION == ''}}
+    - name: set GraphQL Feature Pack Wildfly Version
+      run:
+        echo "GRAPHQL_FEATURE_PACK_WILDFLY_VERSION=${{env.MAJOR_WF_VERSION}}.0.0.Final" >> $GITHUB_ENV
+      if: ${{env.GRAPHQL_FEATURE_PACK_WILDFLY_VERSION == ''}}
 
     - name: build and push the graphql image
       run: >
