--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,14 +7,14 @@ env:
   POSTGRESQL: 42.3.4
   # these are used for the `latest` tag, i.e. the supposedly most stable combination
   LATEST_WILDFLY: 29.0.1.Final
-  LATEST_JDK: 17
+  LATEST_JDK: 21
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        jdk: [ 11, 17 ]
+        jdk: [ 11, 17, 21 ]
         wf: # only one major/minor version! see get-wf-tag
         - 26.0.1.Final
         - 26.1.3.Final
