--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,7 @@ jobs:
         - 27.0.1.Final
         - 28.0.1.Final
         - 29.0.1.Final
+        - 30.0.0.Final
     name: ${{matrix.wf}}-${{matrix.jdk}}
     steps:
     - uses: actions/checkout@v4
@@ -78,6 +79,10 @@ jobs:
       run:
         echo -e "GRAPHQL_FEATURE_PACK_VERSION=2.1.0.Final\nGRAPHQL_FEATURE_PACK_WILDFLY_VERSION=28.0.0.Final" >> $GITHUB_ENV
       if: ${{env.MAJOR_WF_VERSION == '29'}}
+    - name: set GraphQL Feature Pack Version (30)
+      run:
+        echo -e "GRAPHQL_FEATURE_PACK_VERSION=2.1.0.Final\nGRAPHQL_FEATURE_PACK_WILDFLY_VERSION=28.0.0.Final" >> $GITHUB_ENV
+      if: ${{env.MAJOR_WF_VERSION == '30'}}
     - name: Check GRAPHQL_FEATURE_PACK_VERSION
       run:
         echo "GRAPHQL_FEATURE_PACK_VERSION not mapped"
