--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,7 @@ jobs:
         - 33.0.1.Final
     name: "${{matrix.wf}}-${{matrix.jdk}}"
     steps:
+    - uses: actions/checkout@v4
     - uses: docker/setup-qemu-action@v3
     - uses: docker/setup-buildx-action@v3
     - uses: docker/login-action@v3
