--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        jdk: [ 17, 21, 23 ]
+        jdk: [ 17, 21 ]
         wf: # only one major/minor version! see get-wf-tag
         - 32.0.1.Final
         - 33.0.2.Final
