--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
         wf: # only one major/minor version! see get-wf-tag
         - 34.0.1.Final
         - 35.0.1.Final
-        #- 36.0.0.Final
+        - 36.0.0.Final
     name: "${{matrix.wf}}-${{matrix.jdk}}"
     steps:
     - uses: actions/checkout@v4
